# chatbot-penal

./: Makefile  pyproject.toml
notebooks/: 01_dataset.ipynb  02_finetune.ipynb
scripts/: html-to-txt.py  scraper.py
