[tool.poetry]
name = "proyecto-redes"
version = "0.1.0"
description = "Proyecto final curso Deep Learning"
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "~3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ruff = "^0.4.5"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.0"


[tool.poetry.group.data.dependencies]
playwright = "^1.44.0"
beautifulsoup4 = "^4.12.3"
datasets = "^2.19.1"


[tool.poetry.group.finetune.dependencies]
transformers = "^4.41.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120